<resources>
    <string name="app_name">Test</string>
    <string name="login_page_title">Welcome to the Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_title">Login Page</string>
    <string name="hello_home_fragment">Hello Home fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="args_show_toolbar">showToolBar</string>
    <string name="args_show_bottom_navigation_view">showBottomNavigationView</string>
    <string name="title_registration">Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="title_register">Register</string>
    <string name="title_exit">Exit</string>
    <string name="msg_exit">Do you want to exit FunFact?</string>
    <string name="title_ok">Ok</string>
    <string name="title_cancel">Cancel</string>
</resources>