<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.registration.RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_registration"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_normal"
        android:background="@color/teal_700"
        android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/widget_margin_normal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_full_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_normal"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/hint_full_name"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/gray_chateau">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_normal"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_full_name"
            android:hint="@string/hint_email"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/gray_chateau"
            android:layout_marginTop="@dimen/widget_margin_normal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_normal"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
            android:hint="@string/hint_address"
            app:boxBackgroundMode="filled"
            android:layout_marginTop="@dimen/widget_margin_normal"
            app:boxBackgroundColor="@color/gray_chateau">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_normal"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_address"
            android:hint="@string/hint_password"
            app:boxBackgroundMode="filled"
            android:layout_marginTop="@dimen/widget_margin_normal"
            app:boxBackgroundColor="@color/gray_chateau">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_normal"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
            android:hint="@string/hint_confirm_password"
            app:boxBackgroundMode="filled"
            android:layout_marginTop="@dimen/widget_margin_normal"
            app:boxBackgroundColor="@color/gray_chateau">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_normal"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirm_password"
            android:layout_marginTop="@dimen/widget_margin_normal"
            android:background="@null"
            android:backgroundTint="@color/teal_700"
            android:text="@string/title_register"
            app:cornerRadius="0dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/gray_chateau"
        android:layout_marginBottom="@dimen/widget_margin_normal"/>


</androidx.constraintlayout.widget.ConstraintLayout>