<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/teal_700"
        android:text="@string/login_page_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:gravity="center"
        android:layout_margin="@dimen/widget_margin_normal"
        />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/widget_size_normal"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_aod_24"
        android:layout_margin="@dimen/widget_margin_normal"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        android:text="@string/email"
        android:textColor="@color/black"
        android:layout_margin="@dimen/widget_margin_normal"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_margin="@dimen/widget_margin_normal"
        android:background="@color/purple_200"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:text="@string/password"
        android:textColor="@color/black"
        android:layout_margin="@dimen/widget_margin_normal"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        android:layout_margin="@dimen/widget_margin_normal"
        android:background="@color/purple_200"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_margin="@dimen/widget_margin_normal"
        android:text="@string/login" />

</androidx.constraintlayout.widget.ConstraintLayout>